include_directories(${PROJECT_SRC_DIR}/src)
add_library(src 
    SalamancerApplication.cpp
    cef/ClientHandler.cpp
    cef/AutoFunctionForwarder.cpp
    cef/handlers/ToggleWireframeHandler.cpp
    cef/handlers/CreateVoxelHandler.cpp
    cef/handlers/ClearVoxelsHandler.cpp 
    cef/handlers/BatchCreateVoxelsHandler.cpp
    cef/App.cpp
    framework/World.cpp
    framework/Volume.cpp
    framework/meshers/GreedyMesher.cpp
    framework/MeshLoader.cpp
    ois/linux/CustomLinuxKeyboard.cpp
    ois/linux/CustomLinuxMouse.cpp
    ois/linux/CustomLinuxInputManager.cpp
)
ADD_DEFINITIONS(
    -std=c++11
)